PackContentTypes now show in File List
Top Level PackContent SubTypes now also show in list